--- a/portobeats.html
+++ b/portobeats.html
@@ -181,7 +181,7 @@ void noteOff(byte channel, byte pitch, byte velocity) {
     <section>
         <h2>Circuit Schematic</h2>
         <p>The following image shows the circuit schematic for Portobeats, which uses force-sensing resistors connected to an Arduino board to detect finger taps.</p>
-        portobeats_schematic.jpg
+        <img src="portobeatsschematic.png" alt="Portobeats Circuit Schematic">
     </section>
 
     <section>
