--- a/portobeats.html
+++ b/portobeats.html
@@ -187,7 +187,10 @@ void noteOff(byte channel, byte pitch, byte velocity) {
     <section>
         <h2>Interaction Video</h2>
         <p>Watch the interaction with Portobeats below:</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/sample-video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video controls>
+            <source src="portobeats.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </section>
 
     <section>
