--- a/portobeats.html
+++ b/portobeats.html
@@ -97,9 +97,9 @@
     <section>
         <h2>Concept</h2>
         <div class="concept-images">
-            <img src="concept1.png" alt="Concept Image 1">
-            <img src="concept2.png" alt="Concept Image 2">
-            <img src="concept3.png" alt="Concept Image 3">
+            c1.jpg
+            c2.jpg
+            c3.jpg
         </div>
     </section>
 
