--- a/portobeats.html
+++ b/portobeats.html
@@ -97,9 +97,9 @@
     <section>
         <h2>Concept</h2>
         <div class="concept-images">
-            c1.jpg
-            c2.jpg
-            c3.jpg
+            <img src="c1.jpg" alt="Concept 1">
+            <img src="c2.jpg" alt="Concept 2">
+            <img src="c3.jpg" alt="Concept 3">
         </div>
     </section>
 
