--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="author" content="Abdullah Nawaz Sheikh">
     <meta name="description" content="A0 Hello World - Tangible & Physical HCI">
     <title>Projects by Abdullah Nawaz Sheikh</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #1c1c1c;
+            background-color: #121212;
             color: #e0e0e0;
             margin: 0;
             padding: 20px;
@@ -18,68 +19,79 @@
         header {
             text-align: center;
             padding: 20px;
-            border-bottom: 1px solid #555;
+            border-bottom: 1px solid #444;
         }
-        section {
-            background-color: #2a2a2a;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.2s;
-        }
-        section:hover {
-            transform: translateY(-5px);
-        }
-        h1, h2 {
+        header h1 {
+            font-size: 2.5em;
             color: #ffffff;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
-        p, ul, pre {
-            color: #d0d0d0;
+        header p {
+            color: #b0b0b0;
+            font-style: italic;
         }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
+        #projects-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px 0;
         }
-        ul li::before {
-            content: '⚬';
-            color: #4CAF50;
-            padding-right: 10px;
-        }
-        code {
-            background-color: #333;
-            color: #4CAF50;
-            padding: 4px 8px;
-            border-radius: 4px;
-        }
-        img {
-            max-width: 100%;
-            border-radius: 8px;
-            margin: 10px 0;
-        }
-        .video-container {
+        .project-card {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
+            max-width: 300px;
+            width: 100%;
             text-align: center;
-            margin: 20px 0;
         }
-        iframe {
+        .project-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 16px 32px rgba(0, 0, 0, 0.5);
+        }
+        .project-card h2 {
+            color: #4CAF50;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 15px;
+        }
+        .project-card p {
+            color: #b0b0b0;
+            font-size: 0.9em;
+            margin-bottom: 20px;
+        }
+        .project-card a {
+            color: #ffffff;
+            background-color: #4CAF50;
+            padding: 10px 20px;
             border-radius: 8px;
+            text-decoration: none;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
+        .project-card a:hover {
+            background-color: #45a049;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
         footer {
             text-align: center;
-            padding: 10px;
-            font-size: 0.8em;
+            padding: 20px;
+            font-size: 0.9em;
             color: #777;
-            border-top: 1px solid #555;
+            border-top: 1px solid #444;
+            margin-top: 40px;
         }
-        a {
+        footer p {
+            margin: 5px 0;
+        }
+        footer a {
             color: #4CAF50;
             text-decoration: none;
             transition: color 0.2s;
         }
-        a:hover {
+        footer a:hover {
             color: #ffffff;
         }
     </style>
@@ -94,6 +106,7 @@
 
     <footer>
         <p>&copy; 2024 Abdullah Nawaz Sheikh. All rights reserved.</p>
+        <p>Connect with me: <a href="https://github.com/Abuudiii" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
     </footer>
 
     <script>
