--- a/portobeats.html
+++ b/portobeats.html
@@ -81,6 +81,9 @@
             max-width: 30%;
             height: auto;
         }
+        .center-content {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -180,17 +183,21 @@ void noteOff(byte channel, byte pitch, byte velocity) {
 
     <section>
         <h2>Circuit Schematic</h2>
-        <p>The following image shows the circuit schematic for Portobeats, which uses force-sensing resistors connected to an Arduino board to detect finger taps.</p>
-        <img src="portobeatsschematic.png" alt="Portobeats Circuit Schematic">
+        <div class="center-content">
+            <p>The following image shows the circuit schematic for Portobeats, which uses force-sensing resistors connected to an Arduino board to detect finger taps.</p>
+            <img src="portobeatsschematic.png" alt="Portobeats Circuit Schematic">
+        </div>
     </section>
 
     <section>
         <h2>Interaction Video</h2>
-        <p>Watch the interaction with Portobeats below:</p>
-        <video controls>
-            <source src="portobeats.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <div class="center-content">
+            <p>Watch the interaction with Portobeats below:</p>
+            <video controls>
+                <source src="portobeats.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </section>
 
     <section>
@@ -201,9 +208,3 @@ void noteOff(byte channel, byte pitch, byte velocity) {
             <li><a href="https://www.youtube.com/@Science.Buddies" target="_blank">Science Buddies YouTube Channel</a></li>
         </ul>
     </section>
-
-    <footer>
-        <p>&copy; 2024 Abdullah Nawaz Sheikh. All rights reserved.</p>
-    </footer>
-</body>
-</html>
