--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 title: "Portobeats",
                 description: "Portobeats is a wearable glove system that allows users to assign different musical instruments to each finger tap on any surface, enabling them to create beats interactively.",
                 link: "portobeats.html"
+            },
+            {
+                title: "Thrive Mind",
+                description: "The ThriveMind is an interactive installation that blooms based on the user's focus level. Using facial detection technology, the system detects focus duration and controls a flower's blooming state to represent concentration.",
+                link: "ThriveMind.html"
             }
         ];
 
