--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -89,6 +89,10 @@
 
     <section>
         <h2>Concept</h2>
+        <div class="center-content">
+            <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1">
+            <img src="ThriveMindConcept2.jpg" alt="ThriveMind Concept 2">
+        </div>
         <p>The ThriveMind combines computer vision and hardware control to create an immersive visual representation of concentration. The longer you focus on your work, the more the flower blooms, offering a tangible measure of productivity and focus. If focus is lost, the flower gradually closes, serving as a reminder to stay on task.</p>
     </section>
 
@@ -198,7 +202,7 @@ void loop() {
         <div class="center-content">
             <p>Watch the interaction with the Kinetic Flower below:</p>
             <video controls>
-                <source src="kineticflower.mp4" type="video/mp4">
+                <source src="ThriveMindVideo.MOV" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
