--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -62,8 +62,20 @@
         }
         img {
             max-width: 100%;
+            width: 90%;
+            height: auto;
             border-radius: 8px;
-            margin: 10px 0;
+            margin: 10px auto;
+            display: block;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+        video {
+            max-width: 100%;
+            width: 90%;
+            height: auto;
+            border-radius: 8px;
+            margin: 10px auto;
+            display: block;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
         iframe {
@@ -91,7 +103,7 @@
         <h2>Concept</h2>
         <div class="center-content">
             <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1">
-            <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2">
+            <img src="ThriveMindConcept2.jpg" alt="ThriveMind Concept 2">
         </div>
         <p>The ThriveMind combines computer vision and hardware control to create an immersive visual representation of concentration. The longer you focus on your work, the more the flower blooms, offering a tangible measure of productivity and focus. If focus is lost, the flower gradually closes, serving as a reminder to stay on task.</p>
     </section>
