--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -103,7 +103,7 @@
         <h2>Concept</h2>
         <div class="center-content">
             <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1">
-            <img src="ThriveMindConcept2.jpg" alt="ThriveMind Concept 2">
+            <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2">
         </div>
         <p>The ThriveMind combines computer vision and hardware control to create an immersive visual representation of concentration. The longer you focus on your work, the more the flower blooms, offering a tangible measure of productivity and focus. If focus is lost, the flower gradually closes, serving as a reminder to stay on task.</p>
     </section>
