--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -205,7 +205,7 @@ void loop() {
         <h2>Circuit Schematic</h2>
         <div class="center-content">
             <p>The following image shows the circuit schematic for the Kinetic Flower, which uses an ESP32 microcontroller to control the servo motor based on user focus level.</p>
-            <img src="kineticflowerschematic.png" alt="Kinetic Flower Circuit Schematic">
+            <img src="ThriveMindSchematic.png" alt="ThriveMind Circuit Schematic">
         </div>
     </section>
 
