--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -101,10 +101,10 @@
 
     <section>
         <h2>Concept</h2>
-        <div class="center-content">
-            <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1">
-            <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2">
-        </div>
+        <div class="center-content" style="display: flex; justify-content: center; gap: 20px;">
+    <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1" style="width: 45%; height: auto;">
+    <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2" style="width: 45%; height: auto;">
+</div>
         <p>The ThriveMind combines computer vision and hardware control to create an immersive visual representation of concentration. The longer you focus on your work, the more the flower blooms, offering a tangible measure of productivity and focus. If focus is lost, the flower gradually closes, serving as a reminder to stay on task.</p>
     </section>
 
