--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -224,7 +224,7 @@ void loop() {
         <h2>Reference Materials</h2>
         <ul>
             <li><a href="https://opencv.org/" target="_blank">OpenCV Documentation</a></li>
-            <li><a href="https://www.arduino.cc/reference/en/" target="_blank">Arduino Reference</a></li>
+            <li><a href="https://www.esp32.com/" target="_blank">ESP32 Forums</a></li>
         </ul>
     </section>
 
