--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -204,7 +204,7 @@ void loop() {
     <section>
         <h2>Circuit Schematic</h2>
         <div class="center-content">
-            <p>The following image shows the circuit schematic for the Kinetic Flower, which uses an ESP32 microcontroller to control the servo motor based on user focus level.</p>
+            <p>The following image shows the circuit schematic for the ThriveMind, which uses an ESP32 microcontroller to control the servo motor based on user focus level.</p>
             <img src="ThriveMindSchematic.png" alt="ThriveMind Circuit Schematic">
         </div>
     </section>
@@ -212,7 +212,7 @@ void loop() {
     <section>
         <h2>Interaction Video</h2>
         <div class="center-content">
-            <p>Watch the interaction with the Kinetic Flower below:</p>
+            <p>Watch the interaction with the ThriveMind below:</p>
             <video controls>
                 <source src="ThriveMindVideo.MOV" type="video/mp4">
                 Your browser does not support the video tag.
