--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -96,21 +96,21 @@
 
     <section>
         <h2>Project Overview</h2>
-        <p>The ThriveMind is an interactive installation that blooms based on the user's focus level. Using facial detection technology, the system detects how long the user is looking at their screen, and the flower gradually blooms to represent sustained focus. The project is designed to encourage mindfulness and reward focused work sessions.</p>
+        <p>The ThriveMind project is an innovative interactive installation designed to promote and reward focused work sessions through a visual representation of mindfulness. By utilizing facial detection technology, ThriveMind monitors how long the user remains focused on their screen and responds by blooming a flower as a symbol of sustained concentration. This tangible visual feedback encourages users to maintain focus, thus cultivating better work habits and fostering mindfulness during their tasks. The gradual blooming of the flower serves as a metaphor for the growth and benefits of sustained attention.</p>
     </section>
 
     <section>
         <h2>Concept</h2>
         <div class="center-content" style="display: flex; justify-content: center; gap: 20px;">
-    <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1" style="width: 45%; height: auto;">
-    <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2" style="width: 45%; height: auto;">
-</div>
-        <p>The ThriveMind combines computer vision and hardware control to create an immersive visual representation of concentration. The longer you focus on your work, the more the flower blooms, offering a tangible measure of productivity and focus. If focus is lost, the flower gradually closes, serving as a reminder to stay on task.</p>
+            <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1" style="width: 45%; height: auto;">
+            <img src="ThriveMindConcept2.jpg" alt="ThriveMind Concept 2" style="width: 45%; height: auto;">
+        </div>
+        <p>The concept behind ThriveMind lies at the intersection of technology, mindfulness, and creativity. By combining computer vision with hardware control, ThriveMind aims to create an immersive experience that visually represents the user's level of focus. The flower bloom metaphor serves to provide users with immediate feedback on their concentration, reinforcing positive behaviors. As users concentrate, the flower gradually opens, symbolizing productivity and growth. Conversely, when focus is lost, the flower gently closes, serving as a subtle reminder to bring attention back to the task at hand. This design approach makes it easier to internalize the importance of focus and visually track one’s progress.</p>
     </section>
 
     <section>
         <h2>Interaction Details</h2>
-        <p>The system utilizes a webcam to track the user's facial activity and determine whether they are looking at the screen. The Arduino-controlled servo motor gradually moves the petals of the flower to represent the user's focus level. This is done using an ESP32 microcontroller that communicates with the computer via serial connection.</p>
+        <p>The interaction model of ThriveMind is straightforward but impactful. The system uses a webcam to monitor the user's facial activity, specifically focusing on eye contact with the screen. If the user maintains eye contact, the system interprets this as focused attention. The ESP32 microcontroller and an Arduino-controlled servo motor are then employed to translate this data into physical movement, gradually opening or closing the flower petals. This interactive, gradual physical change offers users a direct visual representation of their level of engagement. The ESP32 facilitates seamless communication between the computer and the hardware, ensuring that the response is real-time and intuitive.</p>
     </section>
 
     <section>
@@ -204,7 +204,7 @@ void loop() {
     <section>
         <h2>Circuit Schematic</h2>
         <div class="center-content">
-            <p>The following image shows the circuit schematic for the ThriveMind, which uses an ESP32 microcontroller to control the servo motor based on user focus level.</p>
+            <p>The electronics behind ThriveMind are powered by an ESP32 microcontroller, which serves as the heart of the system, managing the servo motor that controls the petals of the flower. The schematic highlights how each component is interconnected to bring the concept to life. The servo motor receives commands from the ESP32, which in turn gets its instructions based on the user’s interaction with the screen. The circuit schematic demonstrates the simplicity and effectiveness of the design, showing how just a few electronic components can come together to create an expressive and engaging interactive experience.</p>
             <img src="ThriveMindSchematic.png" alt="ThriveMind Circuit Schematic">
         </div>
     </section>
@@ -212,7 +212,7 @@ void loop() {
     <section>
         <h2>Interaction Video</h2>
         <div class="center-content">
-            <p>Watch the interaction with the ThriveMind below:</p>
+            <p>Watch the interaction with the Kinetic Flower below:</p>
             <video controls>
                 <source src="ThriveMindVideo.MOV" type="video/mp4">
                 Your browser does not support the video tag.
@@ -224,7 +224,7 @@ void loop() {
         <h2>Reference Materials</h2>
         <ul>
             <li><a href="https://opencv.org/" target="_blank">OpenCV Documentation</a></li>
-            <li><a href="https://www.esp32.com/" target="_blank">ESP32 Forums</a></li>
+            <li><a href="https://www.arduino.cc/reference/en/" target="_blank">Arduino Reference</a></li>
         </ul>
     </section>
 
