--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -103,7 +103,7 @@
         <h2>Concept</h2>
         <div class="center-content" style="display: flex; justify-content: center; gap: 20px;">
             <img src="ThriveMindConcept1.jpg" alt="ThriveMind Concept 1" style="width: 45%; height: auto;">
-            <img src="ThriveMindConcept2.jpg" alt="ThriveMind Concept 2" style="width: 45%; height: auto;">
+            <img src="ThriveMindConcept2.JPG" alt="ThriveMind Concept 2" style="width: 45%; height: auto;">
         </div>
         <p>The concept behind ThriveMind lies at the intersection of technology, mindfulness, and creativity. By combining computer vision with hardware control, ThriveMind aims to create an immersive experience that visually represents the user's level of focus. The flower bloom metaphor serves to provide users with immediate feedback on their concentration, reinforcing positive behaviors. As users concentrate, the flower gradually opens, symbolizing productivity and growth. Conversely, when focus is lost, the flower gently closes, serving as a subtle reminder to bring attention back to the task at hand. This design approach makes it easier to internalize the importance of focus and visually track one’s progress.</p>
     </section>
