--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -214,7 +214,7 @@ void loop() {
         <div class="center-content">
             <p>Watch the interaction with the Kinetic Flower below:</p>
             <video controls>
-                <source src="ThriveMindVideo.mov" type="video/mp4">
+                <source src="ThriveMindVideo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
