--- a/ThriveMind.html
+++ b/ThriveMind.html
@@ -110,7 +110,7 @@
 
     <section>
         <h2>Interaction Details</h2>
-        <p>The interaction model of ThriveMind is straightforward but impactful. The system uses a webcam to monitor the user's facial activity, specifically focusing on eye contact with the screen. If the user maintains eye contact, the system interprets this as focused attention. The ESP32 microcontroller and an Arduino-controlled servo motor are then employed to translate this data into physical movement, gradually opening or closing the flower petals. This interactive, gradual physical change offers users a direct visual representation of their level of engagement. The ESP32 facilitates seamless communication between the computer and the hardware, ensuring that the response is real-time, intuitive, and engaging.</p>
+        <p>The interaction model of ThriveMind is straightforward but impactful. The system uses a webcam to monitor the user's facial activity, specifically focusing on eye contact with the screen. If the user maintains eye contact, the system interprets this as focused attention. The ESP32 microcontroller and a servo motor are then employed to translate this data into physical movement, gradually opening or closing the flower petals. This interactive, gradual physical change offers users a direct visual representation of their level of engagement. The ESP32 facilitates seamless communication between the computer and the hardware, ensuring that the response is real-time, intuitive, and engaging.</p>
     </section>
 
     <section>
