--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 title: "Thrive Mind",
                 description: "The ThriveMind is an interactive installation that blooms based on the user's focus level. Using facial detection technology, the system detects focus duration and controls a flower's blooming state to represent concentration.",
                 link: "ThriveMind.html"
+            },
+            {
+                title: "PulseLink Bracelets",
+                description: "PulseLink Bracelets are interactive wearable devices that allow two individuals to stay connected by sending a buzz signal wirelessly via ESP-NOW. A force sensor detects input, while a buzzer delivers feedback to the paired bracelet.",
+                link: "PulseLink.html"
             }
         ];
 
