--- a/PulseLink.html
+++ b/PulseLink.html
@@ -102,8 +102,8 @@
     <section>
         <h2>Concept</h2>
         <div class="center-content" style="display: flex; justify-content: center; gap: 20px;">
-            <img src="PulseLinkConcept1.jpg" alt="PulseLink Concept 1" style="width: 45%; height: auto;">
-            <img src="PulseLinkConcept2.jpg" alt="PulseLink Concept 2" style="width: 45%; height: auto;">
+            <img src="plink1.jpg" alt="PulseLink Concept 1" style="width: 45%; height: auto;">
+            <img src="plink3.JPG" alt="PulseLink Concept 2" style="width: 45%; height: auto;">
         </div>
         <p>The concept behind PulseLink Bracelets focuses on enhancing emotional connection through tactile interaction. By using a simple press of the sensor on one bracelet, a signal is transmitted to the paired bracelet, creating a gentle buzz. This minimalist design fosters an intuitive and immediate response, making it a creative tool for staying in touch. The use of ESP-NOW ensures a low-latency connection, reinforcing the real-time experience of the interaction.</p>
     </section>
@@ -185,7 +185,7 @@ void loop() {
         <div class="center-content">
             <p>Watch the PulseLink Bracelets in action:</p>
             <video controls>
-                <source src="PulseLinkVideo.mp4" type="video/mp4">
+                <source src="copy_E666DC97-90B6-48E0-9086-C809EBF48924 2.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
