--- a/PulseLink.html
+++ b/PulseLink.html
@@ -104,6 +104,7 @@
         <div class="center-content" style="display: flex; justify-content: center; gap: 20px;">
             <img src="plink1.jpg" alt="PulseLink Concept 1" style="width: 45%; height: auto;">
             <img src="plink3.JPG" alt="PulseLink Concept 2" style="width: 45%; height: auto;">
+            <img src="plink2.JPG" alt="PulseLink Concept 2" style="width: 45%; height: auto;">
         </div>
         <p>The concept behind PulseLink Bracelets focuses on enhancing emotional connection through tactile interaction. By using a simple press of the sensor on one bracelet, a signal is transmitted to the paired bracelet, creating a gentle buzz. This minimalist design fosters an intuitive and immediate response, making it a creative tool for staying in touch. The use of ESP-NOW ensures a low-latency connection, reinforcing the real-time experience of the interaction.</p>
     </section>
